feat: test flutter_callkeep

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   fl_chart: ^0.40.2
   sensors_plus: ^1.2.1
   esense_flutter: ^0.4.3
+  flutter_callkeep: ^0.2.1
 
 dev_dependencies:
   flutter_test:
