--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   esense_flutter: ^0.4.3
   flutter_callkeep: ^0.2.1
   rxdart: ^0.27.3
+  flutter_vibrate: ^1.3.0
 
 dev_dependencies:
   flutter_test:
