--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_vibrate: ^1.3.0
   hive: ^2.0.5
   hive_flutter: ^1.1.0
+  flutter_chips_input: ^1.10.0
 
 dev_dependencies:
   flutter_test:
